[desktop] Java 17 compatibility for macos baby
 - gradle:added conditional JVM arguments to export com.apple.laf from java.desktop module
 - Updated MacEventHandler to recognize JDK 17
 - changelog