@@ -25,23 +25,29 @@ targetCompatibility = (!OperatingSystem.current().isLinux()) ? JavaVersion.VERSI
 compileJava {
     options.encoding = '8859_1'
     options.fork = true
-    options.compilerArgs += ["-Xlint:deprecation"]
+    options.compilerArgs += ['-Xlint:deprecation']
 }
 
 application {
     mainClass = 'com.limegroup.gnutella.gui.Main'
-		applicationDefaultJvmArgs = [
-		    '-Djava.library.path=lib/native',
-				'-Xms64m',
-				'-Xmx512m',
-				'-Xss256k',
-		    '-Dcom.sun.management.jmxremote.port=9595',
-			  '-Dcom.sun.management.jmxremote.ssl=false',
-				'-Dcom.sun.management.jmxremote.authenticate=false',
-				'-Djava.rmi.server.hostname=127.0.0.1',
-				'-agentlib:jdwp=transport=dt_socket,address=9696,server=y,suspend=n',
-				'-Ddebug=1'
-		]
+    applicationDefaultJvmArgs = [
+            '-Djava.library.path=lib/native',
+            '-Xms64m',
+            '-Xmx512m',
+            '-Xss256k',
+            '-Dcom.sun.management.jmxremote.port=9595',
+            '-Dcom.sun.management.jmxremote.ssl=false',
+            '-Dcom.sun.management.jmxremote.authenticate=false',
+            '-Djava.rmi.server.hostname=127.0.0.1',
+            '-agentlib:jdwp=transport=dt_socket,address=9696,server=y,suspend=n',
+            '-Ddebug=1'
+    ]
+    if (OperatingSystem.current().isMacOsX()) {
+        applicationDefaultJvmArgs += [
+                '-Dsun.java2d.metal=true',
+                '--add-exports=java.desktop/com.apple.laf=ALL-UNNAMED'
+        ]
+    }
 }
 
 repositories {
